top spacing fix attempt

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     margin: 0px auto;
     background-color: #e29578;
     text-align: center;
+    text-shadow: 0px 0px 2px #222;
 }
 
 .bottomBanner
@@ -27,6 +28,7 @@
 
 .prePhotoSection{
     margin: 0px auto;
+    margin-top: 50px;
     background-color:#edf6f9;
     justify-content: center;
     width: 50%;
